# oxide

./: Cargo.toml  Readme.md  ab_results.txt  docker.sh  test.sh  tree.txt
oxide-core/: Cargo.toml
oxide-core/src/: connection.rs  errors.rs  lib.rs  server.rs
oxide-core/src/datasource/: datasource.rs  mod.rs
oxide-core/src/http/: handler.rs  mod.rs  response.rs  routes.rs
oxide-examples/: Cargo.toml
oxide-examples/src/: main.rs
oxide-macros/: Cargo.toml
oxide-macros/src/: lib.rs
oxide-orm/: Cargo.toml
oxide-orm/src/: database.rs  error.rs  lib.rs  schema.rs  types.rs
oxide-orm/src/conn/: mod.rs
oxide-orm/src/query/: builder.rs  mod.rs
