[workspace]
members = [
    "oxide-core",
    "oxide-orm",
    "oxide-macros",
    "oxide-examples"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DeanRTaylor1"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
once_cell = "1.20.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
