[workspace]
members = ["oxide-core", "oxide-orm", "oxide-macros", "oxide-examples"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DeanRTaylor1"]
license = "MIT"

[workspace.dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
] }


[workspace.dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
