[package]
name = "oxide-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
oxide-core = { path = "../oxide-core" }
oxide-orm = { path = "../oxide-orm" }
oxide-macros = { path = "../oxide-macros" }
tokio = { version = "1", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
] }
