[package]
name = "oxide-orm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxide-macros = { path = "../oxide-macros" }
oxide-core = { path = "../oxide-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
thiserror = "2.0.3"
